--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -14,9 +15,8 @@ pymongo==4.11
 python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
+soupsieve==2.6
 starlette==0.45.3
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
-python-docx==1.1.2
-python-multipart
