--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,18 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 dnspython==2.7.0
+exceptiongroup==1.2.2
 fastapi==0.115.8
 h11==0.14.0
 idna==3.10
+lxml==5.3.0
 motor==3.7.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 pymongo==4.11
+python-docx==1.1.2
 python-dotenv==1.0.1
+python-multipart==0.0.20
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
